@@ -1,15 +1,15 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 22 15:53:10 2001 -->
+<!-- Mon Oct 22 16:56:56 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
-Title: TMDA Configuration Overview
+Title: TMDA History
 
 -->
 
 <HEAD>
-<TITLE>TMDA Configuration Overview</TITLE>
+<TITLE>TMDA History</TITLE>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff" TEXT="#000000"
@@ -63,7 +63,7 @@ Overview
 <A HREF="index.html">Introduction</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<A HREF="history.html">History</A>
+<b>History</b>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="features.html">Features</A>
@@ -88,20 +88,7 @@ Usage
 <A HREF="install.html">Installation</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<b>Configuration</b>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">&nbsp;
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
-Configuration
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<b>Overview</b>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config-server.html">Server Configuration</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config-client.html">Client Configuration</A>
+<A HREF="config.html">Configuration</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">&nbsp;
 <TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
@@ -139,16 +126,39 @@ Author
 <!-- end of sidebar cell -->
 <!-- start of body cell -->
 <TD VALIGN=TOP WIDTH="90%"><BR>
-<h3>TMDA Configuration Overview</h3>
+<h3>TMDA History</h3>
 
-Read the <a href="config-server.html">Server Configuration</a>
-section, and then optionally 
-<a href="config-client.html">Client Configuration</a>.
+TMDA was originally modeled after a Perl script written by Thomas
+Erskine called <a href="http://www.DeepEddy.Com/tms.html" TARGET="Resource Window">
+Tagged Message Sender</a> (TMS).  
+After using TMS for a month, I was thrilled with how effective it was
+in reducing my junk mail problem, but the program no longer seemed to
+be maintained or developed. I didn't want to see the software die,
+and also had some new features I wanted to add to it, so I decided to
+rewrite the program from scratch and name the result TMDA.  
 <br><br>
 
-If you are upgrading from an earlier release of TMDA, make sure to
-consult the <strong>UPGRADE</strong> file that came with your TMDA
-distribution.
+The first release of TMDA in April 2001 was essentially a rewrite of
+TMS in Python, and it grew from there.  TMDA has since evolved into a
+significantly larger and more featureful application.  The two
+applications today share very little except for some core ideas.
+<br><br>
+
+Like TMS, early TMDA was strictly a qmail application.  The decision
+was later made to add support for other MTAs in order to expand usage
+and attract developers.  This in turn would improve the overall
+quality of the software.
+<br><br>
+
+Currently TMDA should be considered "alpha" level software because it
+is evolving rapidly.  Features and functionality are continually being
+added, reevaluated and improved, and subtle changes may appear between
+releases.  That said, TMDA users find the software solid and reliable,
+and a concerted effort is made to maintain this during each release.
+<br><br>
+
+TMDA release 1.0 should be expected sometime during the Spring of 2003
+after approximately two years of hacking.
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
