@@ -15,11 +15,6 @@ system (for unknown, but legitimate senders).  TMDA strives to be more
 effectual, yet less time-consuming than traditional filters.
 <br><br>
 
-TMDA was originally modeled after a Perl script written by Thomas Erskine called
-<a href="http://www.DeepEddy.Com/tms.html" TARGET="Resource Window">
-Tagged Message Sender</a> (TMS), but has since evolved into a significantly larger and more 
-featureful application.<br><br>
-
 TMDA's functionality is based upon the following assumptions about the
 current Internet infrastructure:<br>
 <ol>
