@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 22 13:02:13 2001 -->
+<!-- Mon Oct 22 15:54:26 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -61,6 +61,9 @@ Overview
 </FONT></B></TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <b>Introduction</b>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="history.html">History</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="features.html">Features</A>
@@ -136,11 +139,6 @@ TMDA combines a "whitelist" (for known/trusted senders), a "blacklist"
 system (for unknown, but legitimate senders).  TMDA strives to be more
 effectual, yet less time-consuming than traditional filters.
 <br><br>
-
-TMDA was originally modeled after a Perl script written by Thomas Erskine called
-<a href="http://www.DeepEddy.Com/tms.html" TARGET="Resource Window">
-Tagged Message Sender</a> (TMS), but has since evolved into a significantly larger and more 
-featureful application.<br><br>
 
 TMDA's functionality is based upon the following assumptions about the
 current Internet infrastructure:<br>
