@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 22 13:02:14 2001 -->
+<!-- Mon Oct 22 15:53:11 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -61,6 +61,9 @@ Overview
 </FONT></B></TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="index.html">Introduction</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="history.html">History</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="features.html">Features</A>
